@@ -767,8 +767,11 @@ public class FormDataPurchase {
     if (isFeatureEnabled(PREF.FEATURE_STOCK_PRICE_TRACKING)) {
       price = priceStockLive.getValue();
     }
-    Store store = storeLive.getValue();
-    String storeId = store != null ? String.valueOf(store.getId()) : null;
+    String storeId = null;
+    if (isFeatureEnabled(PREF.FEATURE_STOCK_PRICE_TRACKING)) {
+      Store store = storeLive.getValue();
+      storeId = store != null ? String.valueOf(store.getId()) : null;
+    }
     Location location = locationLive.getValue();
     String purchasedDate = purchasedDateLive.getValue();
     String dueDate = dueDateLive.getValue();
@@ -804,6 +807,7 @@ public class FormDataPurchase {
     if (!isFormValid()) {
       return null;
     }
+    assert productDetailsLive.getValue() != null;
     String barcode = barcodeLive.getValue();
     Product product = productDetailsLive.getValue().getProduct();
     Store store = storeLive.getValue();
@@ -811,7 +815,7 @@ public class FormDataPurchase {
     ProductBarcode productBarcode = new ProductBarcode();
     productBarcode.setProductId(product.getId());
     productBarcode.setBarcode(barcode);
-    if (store != null) {
+    if (store != null && isFeatureEnabled(PREF.FEATURE_STOCK_PRICE_TRACKING)) {
       productBarcode.setStoreId(String.valueOf(store.getId()));
     }
     return productBarcode;
